--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3236,8 +3236,8 @@ input, select, textarea {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/TheMilestones_14-cropped.jpg");
+			background-color: #000;
+			background-image: url("../../images/MilestonesLogo_900px"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/TheMilestones_14-cropped.jpg");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														center center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
